# libortho

./: .gitbranch_info.md  .gitbranch_info_gtx4050.md  .gitignore  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_LINUS.txt  COMMIT_MESSAGE_SHORT.txt  CONTRIBUTING.md  DEBUG_BUILD.md  LICENSE  PACKAGE_QUICK_REF.md  PACKAGING_SUMMARY.md  PORTING_GUIDE.md  PROJECT_STRUCTURE.md  Pipfile  QUICKSTART.md  QUICKSTART_A800.md  QUICKSTART_GTX4050.md  QUICKSTART_RTX5060.md  QUICKSTART_WSL.md  README.md  REBUILD_QUICK_REF.md  RUN_TESTS.md  TEST_RUN.md  check_experiments.py  check_ops.py  clean_build.sh  create_a800_branch.sh  create_gtx4050_branch.sh  create_rtx5060_branch.sh  package_environment.sh  pyproject.toml  requirements.txt  setup.py  test_experiments.sh  test_fixes.py
docs/: 1124-新的思路-3.md  1126-code-review-1.md  1126-memory-fix-summary.md  202511261502-code-review.md  202511271614-code-review.md  A800_AMPERE_SUPPORT.md  A800_MIGRATION_CHECKLIST.md  A800_TROUBLESHOOTING.md  ARCHITECTURE_PAPER.md  CODE_PAPER_ALIGNMENT_CHECK.md  CUDA_VERSION_COMPATIBILITY.md  DESIGN_RATIONALE.md  EXPERIMENT_DATA_COMPLETE.md  EXPERIMENT_RESULTS_TEMPLATE.md  FINAL_REVIEW.md  FIXES_SUMMARY.md  GPU_TESTING_STATUS.md  GTX4050_ADA_LOVELACE_SUPPORT.md  GTX4050_EXPERIMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LLAMA3_GTX4050_UPDATE.md  ORTHO_FUSION_COMPLETE.md  PAPER_OUTLINE.md  PAPER_PREPARATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_AUDIT_REPORT.md  PROJECT_PAPER_ALIGNMENT.md  PROJECT_REVIEW.md  REAL_MODEL_EXPERIMENTS_COMPLETE.md  REAL_MODEL_EXPERIMENTS_UPDATE.md  REQUIREMENTS_CHECKLIST.md  (+9 more)
(+80 files in other folders)
