[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0", "torch>=1.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libortho"
version = "0.1.0"
description = "Dual-Manifold LLM Runtime Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "pybind11>=2.10.0",
]

# FIXED: Remove authors from setup.py to avoid pyproject.toml warning
# Authors are now only in setup.py
[project.optional-dependencies]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

